--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,4 @@
+@import url('efeitos.css');
 body {
     background-color: #2c1a1a;
     color: #f5e6d3;
@@ -113,3 +114,6 @@ label {
     font-weight: bold;
     padding: 20px;
 }
+
+
+
