Arrumando index.html

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -121,10 +121,9 @@ label {
 }
 
 .img-tabela:hover {
-    transform: scale(1.15); /* Cresce 15% */
+    transform: scale(1.15);
 }
 
 article {
     overflow: hidden;
 }
-
