--- a/src/css/efeitos.css
+++ b/src/css/efeitos.css
@@ -13,13 +13,18 @@ input:required{
 
 /* Foco nos campos */
 input:focus, textarea:focus{
-    outline: 3px solid rgb(48, 66, 233);
-    transform: scale(1,02);
-    transition: transform 0.2s ease, outline 0.2s ease;
+    outline: 2px solid rgb(100, 0, 0);
+    transform: scale(1,01);
+    transition: transform 0.1s ease, outline 0.1s ease;
 }
 
 /* Muda a cor do texto quando o usuario seleciona o texto */
 p::selection{
     color: rgb(255, 255, 255);
     background: rgb(48, 66, 233);
+}
+
+body.contato nav ul li:nth-child(3) a{
+    font-weight: bold;
+    color: darkred;
 }
