--- a/src/css/equipe.css
+++ b/src/css/equipe.css
@@ -42,6 +42,11 @@ header {
     text-align: center;
 }
 
+body.equipe nav ul li:nth-child(3) a{
+    font-weight: bold;
+    color: darkred;
+}
+
 h1 {
     margin: 0;
     color: #c7a76c; 
